Added JavaFX 17 dependency for mac-aarch64