@@ -4,6 +4,7 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
 	kotlin("jvm")
+	application
 }
 
 group = "tools.aqua"
@@ -13,6 +14,10 @@ repositories {
 	mavenCentral()
 }
 
+application {
+	mainClass.set("tools.aqua.bgw.examples.tetris.main.MainKt")
+}
+
 dependencies {
 	implementation(kotlin("stdlib-jdk8"))
 	implementation(project(":bgw-ui"))
@@ -20,4 +25,15 @@ dependencies {
 
 tasks.withType<KotlinCompile> {
 	kotlinOptions.jvmTarget = "11"
+}
+
+tasks.withType<JavaExec> {
+    doFirst {
+        jvmArgs(
+			listOf(
+				"--module-path", classpath.asPath,
+				"--add-modules", "javafx.controls"
+			)
+		)
+    }
 }
